-Hibernate orphan problem. -UnsupportedOperationException (unmodifiable list - stream.toList).